correct frozen carousel animation on mobile navigation

--- a/src/app/components/currencies/currencies.component.scss
+++ b/src/app/components/currencies/currencies.component.scss
@@ -12,6 +12,10 @@
   }
 }
 
+.animate-carousel {
+  @include carousel-animation(40s);
+}
+
 .app-currencies {
   background-color: black;
   width: 100%;
@@ -26,7 +30,6 @@
     display: flex;
     gap: 1rem;
     width: max-content;
-    @include carousel-animation(40s);
   }
 }
 
